* versions in the future. If you wish to customize PrestaShop for your
* needs please refer to http://www.prestashop.com for more information.
*
*  @author    Hennes Hervé <contact@h-hennes.fr>
*  @copyright 2013-2020 Hennes Hervé
*  @license   http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
*  http://www.h-hennes.fr/blog/
*/

2020-04-07  - V 1.6.0 : Improve code quality
                        New commands to generate htaccess and robots.txt files
                        New commands to list hooks (global or with modules)
                        New command to generate images thumbnails
                        New command to generate console command
                        New command to export images
                        Allow to rename phar file
2019-12-01   - V 1.5.0 : New commands for db interactions
                       New command to list admin users
                       Add pre-commit hook to automatically build phar and update documentation
                       New commands to manage module admin tabs
2019-05-10 - V 1.4.2 : Module generation improvments ( objectmodel )
2019-04-16 - V 1.4.1 : Module generation improvments
2019-03-11 - V 1.4.0 : New commands to generate module files ( declaration, controllers , upgrade )
2019-02-11 - V 1.3.0 : Automatically detect commands
2019-01-12 - V 1.2.4 : Fix wrong exception message in Module Commands
2018-12-03 - V 1.2.4 : Fix wrong exception message in Module/InstallCommand
2018-11-12 - V 1.2.3 : New command to anonymise customer datas
2018-11-03 - V 1.2.2 : New commands and some fixes
2018-05-04 - V 1.2.1 : New command to clear all caches ( PS > 1.7 Only )
2018-01-23 - V 1.2.0 : New commands to clean existing datas ( with native module pscleaner )
2017-12-29 - V 1.1.0 : New commands to deals with cron tasks ( with native module cronjobs )
2017-08-10 - V 1.0.0 : Auto Upgrade works correctly + add build file
2017-08-09 - V 1.0.0-beta1 : New auto-upgrade process