@@ -11,7 +11,7 @@ $configuration = array();
  */
 $configuration['application'] = array(
     'name' => 'PrestashopConsole',
-    'version' => '1.6.0',
+    'version' => '1.6.1',
     'author' => 'hhennes <contact@h-hennes.fr>',
     'contributors' => array(
         'okom3pom',
@@ -19,9 +19,4 @@ $configuration['application'] = array(
         'SebSept'
     )
 );
-
-/**
- * Commands are now automaticaly detected
- * @since 1.3.0
- */
 
