@@ -22,7 +22,10 @@
 *  @license   http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
 *  http://www.h-hennes.fr/blog/
 */
-
+2020-06-25  - V 1.6.1 : #106 Error in generate Images commands
+                        #107 Improve module:hook:list command
+                        #108 Update licence header for generated code
+                        #116 db:export allow to define file name
 2020-04-07  - V 1.6.0 : Improve code quality
                         New commands to generate htaccess and robots.txt files
                         New commands to list hooks (global or with modules)
